Saving data + cli

--- a/notebooks/01_data_fetch.ipynb
+++ b/notebooks/01_data_fetch.ipynb
@@ -17,20 +17,21 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-17T14:05:48.717875Z",
-     "start_time": "2025-04-17T14:05:48.710280Z"
+     "end_time": "2025-04-17T19:03:51.114209Z",
+     "start_time": "2025-04-17T19:03:51.102958Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from alpaca.data.historical import CryptoHistoricalDataClient\n",
+    "from alpaca.data.timeframe import TimeFrame, TimeFrameUnit\n",
     "\n",
     "# No keys required for crypto data\n",
     "client = CryptoHistoricalDataClient()"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 22
   },
   {
    "metadata": {
@@ -55,6 +56,27 @@
    "id": "bb25e0522a2f2b62",
    "outputs": [],
    "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-17T19:32:34.841690Z",
+     "start_time": "2025-04-17T19:32:34.836902Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(\"{f}{g}\".format(f=\"gggggggf\", g=\"ggg\", l=\"000\"))",
+   "id": "fbc4a441e65f74c9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gggggggfggg\n"
+     ]
+    }
+   ],
+   "execution_count": 32
   },
   {
    "metadata": {
