VectorBT intro, indicators

--- a/notebooks/01_data_fetch.ipynb
+++ b/notebooks/01_data_fetch.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-17T14:05:38.506714Z",
-     "start_time": "2025-04-17T14:05:38.499389Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
    "source": "from datetime import datetime",
    "id": "c942bb0df966b1dd",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
    "metadata": {
@@ -59,24 +58,15 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-17T19:32:34.841690Z",
-     "start_time": "2025-04-17T19:32:34.836902Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
    "source": "print(\"{f}{g}\".format(f=\"gggggggf\", g=\"ggg\", l=\"000\"))",
    "id": "fbc4a441e65f74c9",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gggggggfggg\n"
-     ]
-    }
-   ],
-   "execution_count": 32
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
